chore: initial refactor to properly utilize controllers, services, database layers
