# routes/api/v2/src20/balance/[address]/[tick].ts
@@ -1,7 +1,8 @@
-import { CommonClass, getClient, Src20Class } from "$lib/database/index.ts";
+import { getClient, Src20Class } from "$lib/database/index.ts";
 import { Client } from "$mysql/mod.ts";
 import { AddressTickHandlerContext, Src20BalanceResponseBody } from "globals";
 import { ResponseUtil } from "utils/responseUtil.ts"; // Import the responseUtil helper
+import { BlockService } from "$lib/services/blockService.ts";
 
 export const handler = async (
   _req: Request,
@@ -10,7 +11,7 @@ export const handler = async (
   const { address, tick } = ctx.params;
   try {
     const client = await getClient();
-    const last_block = await CommonClass.get_last_block_with_client(client);
+    const lastBlock = await BlockService.getLastBlock();
     const src20 = await Src20Class.get_src20_balance_with_client(
       client as Client,
       address,
@@ -22,7 +23,7 @@ export const handler = async (
     }
 
     const body: Src20BalanceResponseBody = {
-      last_block: last_block.rows[0]["last_block"],
+      last_block: lastBlock.last_block,
       data: src20,
     };
     return ResponseUtil.success(body);
