# static/swagger/openapi.yml
@@ -93,6 +93,38 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponseBody'
 
+  /api/v2/collections:
+    get:
+      summary: Get paginated collections
+      parameters:
+        - in: query
+          name: limit
+          schema:
+            type: integer
+          description: 'The maximum number of collections to retrieve (default: 50)'
+        - in: query
+          name: page
+          schema:
+            type: integer
+          description: 'The page number of the results (default: 1)'
+        - in: query
+          name: creator
+          schema:
+            type: string
+          description: 'Filter collections by creator address'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedCollectionResponseBody'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseBody'
 
   /api/v2/cursed:
     get:
@@ -1758,3 +1790,36 @@ components:
           oneOf:
             - type: string
           nullable: true
+    PaginatedCollectionResponseBody:
+      type: object
+      properties:
+        page:
+          type: integer
+        limit:
+          type: integer
+        totalPages:
+          type: integer
+        total:
+          type: integer
+        last_block:
+          type: integer
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/Collection'
+
+    Collection:
+      type: object
+      properties:
+        collection_id:
+          type: string
+        collection_name:
+          type: string
+        creators:
+          type: array
+          items:
+            type: string
+        stamps:
+          type: array
+          items:
+            $ref: '#/components/schemas/StampRow'
